<?xml version="1.0" encoding="utf-8"?>
<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
    <string name="app_name">Github User</string>
    <string name="name">Name</string>
    <string name="username">Username</string>
    <string name="repository">Repository</string>
    <string name="company">Company</string>
    <string name="location">Location</string>
    <string name="followers">Followers</string>
    <string name="following">Following</string>
    <string name="url">Url</string>
    <string name="search">Find Me.....</string>
    <string name="change_language_settings">Change Language Settings</string>
</resources>

